# P-XRAD

./: .gitignore  pyproject.toml
pxrad/beam/: beam.py
pxrad/detectors/: detector.py  presets.py
pxrad/geometry/: calibration.py  frames.py  pose.py  projection.py  scattering.py
pxrad/image/: config.py
pxrad/io/: __init__.py  _yaml.py
pxrad/lattice/: lattice.py
pxrad/laue/: forward.py  hkl.py
pxrad/materials/: __init__.py  database.py  material.py  rules.py
pxrad/utils/: linalg.py  types.py  units.py
tests/: test_linalg.py  test_projection.py  textcolors.py
tests/diagnostics/: projection_demo.py
